--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "booking-unaj",
+    "name": "resto-unaj",
     "version": "1.0.0",
     "description": "Página de reserva de hoteles para todos los sitios más turísticos de la Argentina",
     "main": "server.js",
@@ -7,11 +7,8 @@
         "lib": "lib"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack --config webpack.config.js",
-        "start:dev": "webpack serve --mode=development",
-        "build2": "browserify ./src/bundle.js -o ./public/app.js ",
-        "watch": "nodemon --ignore public"
+        "build": "webpack --config webpack.config.js",
+        "start": "webpack serve --mode=development"
     },
     "keywords": [],
     "author": "",
@@ -19,6 +16,7 @@
     "dependencies": {
         "connect-livereload": "^0.6.1",
         "express": "^4.17.1",
+        "express-handlebars": "^5.3.2",
         "handlebars": "^4.7.7",
         "jquery": "^3.6.0",
         "livereload": "^0.9.3",
@@ -39,6 +37,7 @@
         "sass": "^1.34.1",
         "sass-loader": "^12.0.0",
         "style-loader": "^2.0.0",
+        "sweetalert": "^2.1.2",
         "tailwindcss": "^2.1.4",
         "webpack": "^5.38.1",
         "webpack-cli": "^4.7.0",
